--- a/sites/login.html
+++ b/sites/login.html
@@ -34,7 +34,7 @@
                         <ul class="navbar-nav">
                           
                             <li class="nav-item">
-                                <a href="#" class="nav-link link-light">Sign Up</a>
+                                <a href="#" class="nav-link link-light" href="signup.html">Sign Up</a>
                             </li>
                         </ul>
                     </span>
