--- a/sites/login.html
+++ b/sites/login.html
@@ -60,7 +60,7 @@
     
             <div >
       
-      <button type="submit" class="login">Sign Up</button>
+      <button type="submit" class="login btn btn-secondary">Log In</button>
     </div>
  
 
