--- a/sites/signup.html
+++ b/sites/signup.html
@@ -28,7 +28,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link link-light" href="#">Faqja 4</a>
-                                
+
                             </li>
                         </ul>
                         <span class="navbar-text">
@@ -69,7 +69,7 @@
 
                 <div >
 
-      <button type="submit" class="login">Sign Up</button>
+      <button type="submit" class="login btn btn-secondary">Sign Up</button>
     </div>
 
 
