--- a/sites/account.html
+++ b/sites/account.html
@@ -1,9 +1,8 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Sign Up</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/home.css">
+        <title>Account</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
     <body>
         <header>
@@ -39,44 +38,15 @@
                                 <li class="nav-item">
                                     <a href="login.html" class="nav-link link-light">Log In</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link link-light">Sign Up</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </nav>
         </header>
-        <br><br>
-        <form action="" id="h">
-
-            <div class="container">
-                <label for=""><b>Name</b></label>
-                <input type="text"placeholder="Enter Name and Surname"  required>
-
-                <br><br>
-
-                <label for="username"><b>Username</b></label>
-                <input type="text" placeholder="Enter Username"  required>
-
-                <br><br>
-
-                <label for="ID"><b>ID number</b></label>
-                <input type="text" placeholder="ID">
-
-                <br><br>
-
-                <label for="Password"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password">
-
-                <br><br>
-
-                <div >
-
-      <button type="submit" class="login btn btn-secondary">Sign Up</button>
-    </div>
-
-
-            </div>
-        </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
