--- a/sites/account.html
+++ b/sites/account.html
@@ -8,7 +8,7 @@
         <header>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand mx-2" href="#">
+                    <a class="navbar-brand mx-2" href="home.html">
                         <img src="../images/small_logo.png" alt="Logo" height="40px" width="45px" class="rounded">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
