--- a/sites/crypto.html
+++ b/sites/crypto.html
@@ -3,12 +3,13 @@
     <head>
         <title>Crypto Calculator</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <link rel="stylesheet" href="../style/crypto.css">
     </head>
     <body>
         <header>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand mx-2" href="#">
+                    <a class="navbar-brand mx-2" href="home.html">
                         <img src="../images/small_logo.png" alt="Logo" height="40px" width="45px" class="rounded">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
