--- a/sites/home.html
+++ b/sites/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand mx-2" href="home.html">
                     <img src="../images/small_logo.png" alt="Logo" height="40px" width="45px" class="rounded">
@@ -51,6 +51,33 @@
         </nav>
     </header>
 
+    <main class="container-fluid main-part">
+        <h1 id="main-title">BE PART OF SOMETHING BIGGER</h1>
+        <h3 id="main-subtitle">Banking. Leadership. Expertise.</h3>
+    </main>
+    <section id="statistics-of-bank" class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <h3>21,970 +</h3>
+                <h5>Clients</h5>
+            </div>
+            <div class="col">
+                <h3>52,000 $</h3>
+                <h5>Loan Average</h5>
+            </div>
+            <div class="col">
+                <h3>25</h3>
+                <h5>Branch Number</h5>
+            </div>
+            <div class="col">
+                <h3>39</h3>
+                <h5>Ongoing Projects</h5>
+            </div>
+        </div>
+    </section>
+    <section class="container pt-5">
+        <h3 class="text-center">Services and Products</h3>
+    </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
