--- a/sites/home.html
+++ b/sites/home.html
@@ -53,7 +53,7 @@
 
     <main class="container-fluid main-part">
         <h1 id="main-title">BE PART OF SOMETHING BIGGER</h1>
-        <h3 id="main-subtitle">Banking. Leadership. Expertise.</h3>
+        <h3 id="main-subtitle"><i>Banking. Leadership. Expertise.</i></h3>
     </main>
     <section id="statistics-of-bank" class="container-fluid">
         <div class="row">
@@ -77,6 +77,18 @@
     </section>
     <section class="container pt-5">
         <h3 class="text-center">Services and Products</h3>
+        <p>Our bank works in more than 20 countries, cooperating with partners in the public and private sector with the goal of ending poverty and tackling some of the most pressing development challenges.</p>
+        <p>As financial help, our bank offers the following loans: </p>
+        <ul>
+            <li><u>Normal Loan</u> - this loan is given to individual customers and the value can be up to $50,000</li>
+            <li><u>Entrepreneurship Loan</u> - this loan is given to new startups and the value can reach $100,000</li>
+            <li><u>Big Business Loan</u> - this loan is given to big businesses and the minimum value of the loan is $100,000</li>
+        </ul>
+    </section>
+    <section class="container-fluid" id="locations">
+        <h3>Our Locations</h3>
+        <p>Our headquarters are in New York, USA</p>
+        <p>However we also have branches in the following countries</p>
     </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
