--- a/sites/login.html
+++ b/sites/login.html
@@ -3,7 +3,7 @@
     <title>Log In</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/home.css">
+    <link rel="stylesheet" href="login&signup.css">
 </head>
 <body>
     <header>
@@ -47,24 +47,25 @@
 
 
     <form action="" id="h">
+        <fieldset>
         <div class="container">
-            <label for="username"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username"  required>
+            <label for="username" class="label"><b>Username  </b></label>
+            <input type="text" placeholder="Enter Username" class="input" required>
 
             <br><br>
 
-            <label for="Password"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password">
+            <label for="Password" class="label"><b>Password </b></label>
+            <input type="password" placeholder="Enter Password" class="input">
 
             <br><br>
     
-            <div >
-      
+    <div>      
       <button type="submit" class="login btn btn-secondary">Log In</button>
     </div>
  
 
         </div>
+    </fieldset>
     </form>
 </body>
 </html>
