--- a/sites/signup.html
+++ b/sites/signup.html
@@ -3,7 +3,7 @@
         <title>Sign Up</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/home.css">
+    <link rel="stylesheet" href="../style/home.">
     </head>
     <body>
         <header>
@@ -48,22 +48,27 @@
 
             <div class="container">
                 <label for=""><b>Name</b></label>
-                <input type="text"placeholder="Enter Name and Surname"  required>
+                <input type="text"placeholder="Enter Name and Surname" class="input"  required>
 
                 <br><br>
 
                 <label for="username"><b>Username</b></label>
-                <input type="text" placeholder="Enter Username"  required>
+                <input type="text" placeholder="Enter Username" class="input"  required>
 
                 <br><br>
 
                 <label for="ID"><b>ID number</b></label>
-                <input type="text" placeholder="ID">
+                <input type="text" placeholder="ID" class="input">
 
                 <br><br>
 
                 <label for="Password"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password">
+                <input type="password" placeholder="Enter Password" class="input">
+
+                <br><br>
+
+                <label for="psw-repeat"><b>Repeat Password</b></label>
+                <input type="password" placeholder="Repeat Password" name="psw-repeat" class="input" required>
 
                 <br><br>
 
