--- a/sites/home.html
+++ b/sites/home.html
@@ -75,7 +75,7 @@
             </div>
         </div>
     </section>
-    <section class="container pt-5">
+    <section class="container pt-5 mt-2 mb-5">
         <h3 class="text-center">Services and Products</h3>
         <p>Our bank works in more than 20 countries, cooperating with partners in the public and private sector with the goal of ending poverty and tackling some of the most pressing development challenges.</p>
         <p>As financial help, our bank offers the following loans: </p>
@@ -89,7 +89,30 @@
         <h3>Our Locations</h3>
         <p>Our headquarters are in New York, USA</p>
         <p>However we also have branches in the following countries</p>
+        <table class="table table-borderless text-light">
+            <tr>
+                <td>Armenia</td>
+                <td>Albania</td>
+                <td>Bosnia</td>
+                <td>Belgium</td>
+            </tr>
+            <tr>
+                <td>Denmark</td>
+                <td>England</td>
+                <td>Finland</td>
+                <td>Ireland</td>
+            </tr>
+            <tr>
+                <td>Kosova</td>
+                <td>Greece</td>
+                <td>Germany</td>
+                <td>France</td>
+            </tr>
+        </table>
     </section>
+    <footer class="copyright-section">
+        <p>@Copyright 2022 - Grupi 22</p>
+    </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
