commited the last few changes

--- a/sites/crypto.html
+++ b/sites/crypto.html
@@ -52,6 +52,7 @@
     <div class="container">
         <div class="row">
             <div class="col-8">
+                <h4 class="top-list-title">USD To Crypto Calculator</h4>
                 <form class="form-control" action="index.html" method="post">
                     <legend>Crypto Calculator</legend>
                     <div class="input-group mb-3">
@@ -80,7 +81,7 @@
                 </form>
             </div>
             <div class="col-4">
-                <h4>Top Cyptocurrencies</h4>
+                <h4 class="top-list-title">Top Cyptocurrencies</h4>
                 <ol class="list-group list-group-numbered">
                     <li class="list-group-item">Bitcoin (BTC)</li>
                     <li class="list-group-item">Ethereum (ETH)</li>
