--- a/sites/crypto.html
+++ b/sites/crypto.html
@@ -53,7 +53,7 @@
         <div class="row">
             <div class="col-8">
                 <h4 class="top-list-title">USD To Crypto Calculator</h4>
-                <form class="form-control" action="index.html" method="post">
+                <form class="form-control" action="crypto.html" method="post">
                     <legend>Crypto Calculator</legend>
                     <div class="input-group mb-3">
                         <span class="input-group-text">$</span>
