--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -49,9 +49,24 @@
             </nav>
         </header>
         <div class="container">
-        <h1>Kontakti</h1>
-        <p>Në formën më poshtë mund të lini një koment ose rishikim për ne! Çdo mendim i klientëve tanë ka rëndësi për ne!</p>
-        </div>
+            <h1>Kontakti</h1>
+            <p><i>Në formën më poshtë mund të lini një koment ose rishikim për ne! Çdo mendim i klientëve tanë ka rëndësi për ne!</i></p>
+            <br>
+            <div class="container" id="1">
+            <input type="text" placeholder="Emri">
+             <input type="text" placeholder="Mbiemri">
+            <br>
+            <br>
+            <div class="container">
+            <input type="email" maxlength="50" placeholder="E-mail">
+            <br>
+            <br>
+            <textarea cols="4" rows="4" maxlength="250" placeholder="Pyetje apo sygjerim?"></textarea>
+            <br>
+            <br>
+            <button type="submit">Submit</button>
+            </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
 </html>
