--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -48,10 +48,16 @@
                 </div>
             </nav>
         </header>
-        <div class="container">
-        <h1>Kontakti</h1>
-        <p>Në formën më poshtë mund të lini një koment ose rishikim për ne! Çdo mendim i klientëve tanë ka rëndësi për ne.</p>
-        </div>
+        <section>
+            <div class="section-header">
+                <div class="container">
+                    <h2>Kontaktoni me ne</h2>
+                    <p>
+                        Në formën më poshtë mund të lini një koment ose rishikim për ne! Çdo mendim i klientëve tanë ka rëndësi për ne!
+                    </p>
+                </div>
+            </div>
+        </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
 </html>
