--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -57,6 +57,27 @@
                     </p>
                 </div>
             </div>
+            <div class="container">
+                <div class="row">
+                    <div class="contact-info">
+                        <div class="contact-form">
+                            <form id="contact-form">
+                                <div class="input-box">
+                                    <input type="text" 
+                                    required="true" placeholder="Emri dhe Mbiemri">
+                                </div>
+                                <div class="input-box">
+                                    <input type="email" 
+                                    required="true" placeholder="E-mail">
+                                </div>
+                                <div class="input-box">
+                                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
