--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -53,7 +53,7 @@
                 <div class="container">
                     <h2>Kontaktoni me ne</h2>
                     <p>
-                        Në formën më poshtë mund të lini një koment ose rishikim për ne! Çdo mendim i klientëve tanë ka rëndësi për ne!
+                        <i><u> Në formën më poshtë mund të lini një koment ose rishikim për ne! Çdo mendim i klientëve tanë ka rëndësi për ne! </u></i>
                     </p>
                 </div>
             </div>
@@ -66,14 +66,17 @@
                                     <input type="text" 
                                     required="true" placeholder="Emri dhe Mbiemri">
                                 </div>
+                                <br>
                                 <div class="input-box">
                                     <input type="email" 
                                     required="true" placeholder="E-mail">
                                 </div>
+                                <br>
                                 <div class="input-box">
                                     <textarea name="" id="" cols="30" rows="10"></textarea>
                                 </div>
                             </form>
+                            <br>
                             <div class="submit">
                                 <button type="submit">Submit</button>
                             </div>
@@ -81,7 +84,21 @@
                     </div>
                 </div>
             </div>
-            
+
+        </section>
+        <section>
+            <div class="section-header">
+                <div class="container">
+                    <h2>Orari i punes</h2>
+                    <h3>08 : 00 AM - 16 : 00 PM</h3>
+                </div>
+            </div>
+            <div class="adresa">
+                <p>Ju gjithmonë mund të vini dhe të na takoni në selinë tonë:</p>
+                <br>
+                <br>
+                <p> Adresa: Magjistralja Prishtine - Ferizaj, km i 6-te.</p>
+            </div>
         </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
