--- a/sites/login.html
+++ b/sites/login.html
@@ -3,7 +3,7 @@
     <title>Log In</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="login&signup.css">
+    <link rel="stylesheet" href="../style/login&signup.css">
 </head>
 <body>
     <header>
@@ -37,7 +37,7 @@
                     <div class="">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="#" class="nav-link link-light">Sign Up</a>
+                                <a href="signup.html" class="nav-link link-light">Sign Up</a>
                             </li>
                         </ul>
                     </div>
@@ -70,7 +70,58 @@
         </div>
     </fieldset>
     </form>
-    <h1>Trying smth</h1>
+
+
+    <fieldset style="width: 20px;">
+        <legend style="color: blue; font-weight: bold;">Shenoni te dhenat</legend>
+        <form>
+            <table>
+                <tr>
+                    <td><label for="emri-form">Emri:</label></td>
+                    <td><input type="text" id="emri"></td>
+                </tr>
+                <tr>
+                    <td><label for="mbiemri-form">Mbiemri:</label></td>
+                    <td><input type="text" id="mbiemri"></td>
+                </tr>
+                <tr>
+                    <td><label for="">Gjinia: </label></td>
+                    <td>
+                        <input type="radio" name="gjinia"><label for="">M</label>
+                        <input type="radio" name="gjinia"><label>F</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td><label for="">Gjuhet <br> programuese:</label></td>
+                    <td>
+                        <input type="checkbox" name="gj-p"><label>C#</label>
+                        <input type="checkbox" name="gj-p"><label>C++</label>
+                        <input type="checkbox" name="gj-p"><label>Java</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td><label for="">Vendlindja: </label></td>
+                    <td>
+                        <select name="vendlindja" id="vendlindja" multiple>
+                            <option value="">Prishtine</option>
+                            <option value="">Peje</option>
+                            <option value="">Prizren</option>
+                            <option value="">Gjakove</option>
+                        </select>
+                    </td>
+                <tr>
+                    <td><label for="">Komenti:</label></td>
+                    <td><textarea name="" id="" placeholder="Komenti..."></textarea></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>
+                        <input type="submit" value="Sumbit">
+                        <input type="reset" value="Reset">
+                    </td>
+                </tr>
+            </table>
+    </fieldset>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
