--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -4,6 +4,7 @@
         <title>Contact Us</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="../style/contact_us.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -93,12 +94,26 @@
                       <h3>08 : 00 AM - 16 : 00 PM</h3>
               </div>
               <div class="adresa">
+
+                  <div class="text">
+
                   <p>Ju gjithmonë mund të vini dhe të na takoni në selinë tonë:</p>
-                  <br>                
+                  <br>
+                
                   <p> Adresa: Magjistralja Prishtine - Ferizaj, km i 6-te.</p>
+                  <br>
+                  
+                  <p>Email: <b>contact@grandbank.com</b></p>
+                  <br>
+                  <a href="#" class="fa fa-facebook"><a href="wwww.facebook.com" target="_blank"></a></a>
+                  <a href="#" class="fa fa-twitter"></a>
+                </div>
+
               </div>
             </div>
           </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
     </body>
 </html>
