--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -49,16 +49,16 @@
                 </div>
             </nav>
         </header>
+        <div class="container">
+        <div style="width: 20%; float:left">
         <section>
+        <div class="row"></div>
             <div class="section-header">
-                <div class="container">
                     <h2>Kontaktoni me ne</h2>
                     <p>
                         <i><u> Në formën më poshtë mund të lini një koment ose rishikim për ne! Çdo mendim i klientëve tanë ka rëndësi për ne! </u></i>
                     </p>
-                </div>
             </div>
-            <div class="container">
                 <div class="row">
                     <div class="contact-info">
                         <div class="contact-form">
@@ -83,21 +83,23 @@
                             </div>
                         </div>
                     </div>
-                </div>
             </div>
 
         </section>
+        </div>
+        </div>
+        <div class="container">
+        <div style="width: 20%; float:right">
+
+        
         <section>
-            <div class="container">
               <div class="section-header">
                       <h2>Orari i punes</h2>
                       <h3>08 : 00 AM - 16 : 00 PM</h3>
               </div>
               <div class="adresa">
-
-                  <div class="text">
-
-                  <p>Ju gjithmonë mund të vini dhe të na takoni në selinë tonë:</p>
+                <div class="text">
+                <p>Ju gjithmonë mund të vini dhe të na takoni në selinë tonë:</p>
                   <br>
                 
                   <p> Adresa: Magjistralja Prishtine - Ferizaj, km i 6-te.</p>
@@ -108,10 +110,11 @@
                   <a href="#" class="fa fa-facebook"><a href="wwww.facebook.com" target="_blank"></a></a>
                   <a href="#" class="fa fa-twitter"></a>
                 </div>
-
-              </div>
             </div>
           </section>
+        </div>
+        </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
