--- a/sites/about_us.html
+++ b/sites/about_us.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+            html,body{
+                background-image:url("../images/aboutus_mainpage.png");
+                height: 100%;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+            }
+            .aboutus_heading{
+                text-align: left;
+                margin-top: 200px;
+                font-family: Calibri;
+            }
+            .aboutus_desc{
+                font-family: Calibri;
+            }
+        </style>
         <title>About Us</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="../style/about_us.css">
@@ -16,7 +33,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <div class="collapse navbar-collapse menu-drop" id="navbarNavDropdown">
                         <ul class="navbar-nav me-auto">
                             <li class="nav-item">
                                 <a class="nav-link active link-light" aria-current="page" href="home.html">Home</a>
@@ -25,7 +42,16 @@
                                 <a class="nav-link link-light" href="crypto.html">Crypto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link link-light" href="about_us.html">About Us</a>
+                                <a class="nav-link link-light" href="about_us.html" target="_blank">About Us <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"/>
+                                  </svg></a>
+                                <div class="dropdown_menu">
+                                    <ul>
+                                        <li><a href="aboutus_basicinfo.html">Basic Informations</a></li>
+                                        <li><a href="#">Gallery</a></li>
+                                        <li><a href="#">Employment</a></li>
+                                    </ul>
+                                </div>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link link-light" href="contact_us.html">Contact Us</a>
@@ -48,6 +74,11 @@
                 </div>
             </nav>
         </header>
+
+        <main class="main_aboutus">
+            <h1 class="aboutus_heading">Everything About Us</h1>
+            <h5 class="aboutus_desc">Safety. Equality. Sincerity.</h5>
+        </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
