--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -75,7 +75,7 @@
                                     </div>
                                     <br>
                                     <div class="input-box">
-                                        <textarea name="" id="" cols="30" rows="7"></textarea>
+                                        <textarea name="" id="" cols="100" rows="7" placeholder="Mesazhi juaj"></textarea>
                                     </div>
                                 </form>
                                 <br>
