--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -49,6 +49,9 @@
                 </div>
             </nav>
         </header>
+        <div class="header">
+            <h1>Kontakti</h1>
+        </div>
         <div class="container">
             <div style="width: 60%; float:left">
             <section>
@@ -113,7 +116,7 @@
               </section>
             </div>
             </div>
-    
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
