--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -83,7 +83,7 @@
                                 </form>
                                 <br>
                                 <div class="submit">
-                                    <button type="submit">Submit</button>
+                                    <button class="submit button" type="submit">Dergo</button>
                                 </div>
                             </div>
                         </div>
