--- a/sites/crypto.html
+++ b/sites/crypto.html
@@ -26,14 +26,14 @@
                                 <a class="nav-link" href="crypto.html">Crypto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link link-light" href="about_us.html" target="_blank">About Us <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
+                                <a class="nav-link link-light" href="about_us.html">About Us <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"/>
                                   </svg></a>
                                 <div class="dropdown_menu">
                                     <ul>
                                         <li><a href="basicinfo.html">Basic Informations</a></li>
-                                        <li><a href="#">Gallery</a></li>
-                                        <li><a href="#">Employment</a></li>
+                                        <li><a href="gallery.html">Gallery</a></li>
+                                        <li><a href="employment.html">Employment</a></li>
                                     </ul>
                                 </div>
                             </li>
