--- a/sites/basicinfo.html
+++ b/sites/basicinfo.html
@@ -55,9 +55,9 @@
                                   </svg></a>
                                 <div class="dropdown_menu">
                                     <ul>
-                                        <li><a href="aboutus_basicinfo.html">Basic Informations</a></li>
-                                        <li><a href="#">Gallery</a></li>
-                                        <li><a href="#">Employment</a></li>
+                                        <li><a href="basicinfo.html">Basic Informations</a></li>
+                                        <li><a href="gallery.html">Gallery</a></li>
+                                        <li><a href="employment.html">Employment</a></li>
                                     </ul>
                                 </div>
                             </li>
