--- a/sites/gallery.html
+++ b/sites/gallery.html
@@ -1,24 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            html,body{
-                background-image:url("../images/aboutus_mainpage.png");
-                height: 100%;
-                background-repeat: no-repeat;
-                background-size: cover;
-                background-position: center;
-            }
-            .aboutus_heading{
-                text-align: left;
-                margin-top: 200px;
-                font-family: Calibri;
-            }
-            .aboutus_desc{
-                font-family: Calibri;
-            }
-        </style>
-        <title>About Us</title>
+        <title>Gallery</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="../style/about_us.css">
     </head>
@@ -74,11 +57,6 @@
                 </div>
             </nav>
         </header>
-
-        <main class="main_aboutus">
-            <h1 class="aboutus_heading">Everything About Us</h1>
-            <h5 class="aboutus_desc">Safety. Equality. Sincerity.</h5>
-        </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
