--- a/sites/login.html
+++ b/sites/login.html
@@ -51,7 +51,7 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-            <img src="../images/login.jfif" alt="">
+            <img src="../images/login.jfif" alt="" style="border-radius:20px;">
         </div>
 
         <div class="col-6">
