--- a/sites/account.html
+++ b/sites/account.html
@@ -39,7 +39,7 @@
                                     <a href="login.html" class="nav-link link-light">Log In</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link link-light">Sign Up</a>
+                                    <a href="signup.html" class="nav-link link-light">Sign Up</a>
                                 </li>
                             </ul>
                         </div>
