--- a/sites/crypto.html
+++ b/sites/crypto.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-lg" style="background-color:#E6C37A;">
                 <div class="container-fluid">
                     <a class="navbar-brand mx-2" href="home.html">
                         <img src="../images/small_logo.png" alt="Logo" height="40px" width="45px" class="rounded">
@@ -17,7 +17,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse menu-drop id="navbarNavDropdown">
+                    <div class="collapse navbar-collapse menu-drop" id="navbarNavDropdown">
                         <ul class="navbar-nav me-auto">
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="home.html">Home</a>
@@ -26,7 +26,7 @@
                                 <a class="nav-link" href="crypto.html">Crypto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link link-light" href="about_us.html">About Us <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
+                                <a class="nav-link" href="about_us.html">About Us <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"/>
                                   </svg></a>
                                 <div class="dropdown_menu">
