--- a/sites/home.html
+++ b/sites/home.html
@@ -90,9 +90,9 @@
         <p>Our bank works in more than 20 countries, cooperating with partners in the public and private sector with the goal of ending poverty and tackling some of the most pressing development challenges.</p>
         <p>As financial help, our bank offers the following loans: </p>
         <ul>
-            <li><u>Normal Loan</u> - this loan is given to individual customers and the value can be up to $50,000</li>
-            <li><u>Entrepreneurship Loan</u> - this loan is given to new startups and the value can reach $100,000</li>
-            <li><u>Big Business Loan</u> - this loan is given to big businesses and the minimum value of the loan is $100,000</li>
+            <li><u>Normal Loan</u> - this loan is given to individual customers and the value can be up to <mark>$50,000</mark></li>
+            <li><u>Entrepreneurship Loan</u> - this loan is given to new startups and the value can reach <mark>$100,000</mark></li>
+            <li><u>Big Business Loan</u> - this loan is given to big businesses and the minimum value of the loan is <mark>$100,000</mark></li>
         </ul>
     </section>
     <section class="container-fluid" id="locations">
