--- a/sites/home.html
+++ b/sites/home.html
@@ -97,7 +97,7 @@
     </section>
     <section class="container-fluid" id="locations">
         <h3>Our Locations</h3>
-        <p>Our headquarters are in New York, USA</p>
+        <p>Our headquarters are in Canada</p>
         <p>However we also have branches in the following countries</p>
         <table class="table table-borderless text-light">
             <tr>
