--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -55,9 +55,9 @@
             <section>
             <div class="row">
                 <div class="section-header">
-                        <h2>Contact with us</h2>
+                        <h2>Contact us</h2>
                         <p>
-                            <i><u> In the form below you can leave a comment or review for us! Every thought of our clients matters to us!</u></i>
+                            <i><u> In the form below you can leave a comment or review for us! Every thought of our clients matters!</u></i>
                         </p>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                         <div class="contact-info">
                             <div class="contact-form">
                                 <form id="contact-form">
-                                    <div class="input-box">
+                                    <div class="input-box ">
                                         <input type="text"
                                         required="true" placeholder="Full name">
                                     </div>
@@ -83,7 +83,7 @@
                                 </form>
                                 <br>
                                 <div class="submit">
-                                    <button class="submit button" type="submit">Submit</button>
+                                    <button class="btn btn-secondary" type="submit">Submit</button>
                                 </div>
                             </div>
                         </div>
@@ -97,7 +97,7 @@
             <section>
                   <div class="section-header">
                           <h2>Working Hours</h2>
-                          <h3>08:00 AM - 16:00 PM</h3>
+                          <h3>08:00 - 16:00</h3>
                   </div>
                   <div class="adresa">
                     <div class="text">
@@ -110,7 +110,7 @@
                           <input class="form-check-input" type="radio" id="radio1" name="cmethod" value="phone" checked>
                           <label class="form-check-label" for="radio1">Phone</label>
                          </div>
-  
+
                         <div class="form-check mb-3">
                           <input class="form-check-input" type="radio" id="radio2" name="cmethod" value="mail">
                           <label class="form-check-label" for="radio2">Email</label>
@@ -127,9 +127,9 @@
             </div>
             </div>
         </form>
-            <section>
+            <section class="container-fluid">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21731.7362212831!2d-55.76517898254629!3d47.08991440928087!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b6d937117a6fdf3%3A0x3013eace34e25fab!2sGrand%20Bank%2C%20NL%2C%20Canada!5e0!3m2!1sen!2s!4v1672904281063!5m2!1sen!2s" width="100%" height="350" style="border:0; margon" allowfullscreen="" loading="lazy"  referrerpolicy="no-referrer-when-downgrade"></iframe>
-              </section>
+            </section>
             <footer>
                 <div class="footer-content">
                     <ul class="socials">
