--- a/sites/about_us.html
+++ b/sites/about_us.html
@@ -19,8 +19,11 @@
             }
         </style>
         <title>About Us</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <link rel="stylesheet" href="../style/about_us.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style/home.css">
+    <link rel="stylesheet" href="../style/about_us.css">
     </head>
     <body>
         <header>
@@ -79,6 +82,16 @@
             <h1 class="aboutus_heading">Everything About Us</h1>
             <h5 class="aboutus_desc">Safety. Equality. Sincerity.</h5>
         </main>
+        <div class="description_container">
+            Grand Bank is a leading banking institution in Canada with a constant trend of growth
+            and positive results from its foundation until today. <br>
+            The success is due to the implementation of high-quality standards in operation,
+            the modern infrastructure of information technology, the successful market strategy,
+            as well as the professional management. <br> <br>
+            We aim to be among the leading financial institutions in the world, <br> <br>
+            To ensure a higher level of quality of services, modern offer of new products and building tradition of the Bank, <br> <br>
+            To make a profit through efficiency and economy in operation.
+        </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
