--- a/sites/basicinfo.html
+++ b/sites/basicinfo.html
@@ -89,7 +89,7 @@
             <table class="table1">
                 <tr class="table_row">
                     <td class="td">Headquarters: </td>
-                    <td class="table_data td">Allen St, New York, USA</td>
+                    <td class="table_data td">Grandview Blvd, Canada</td>
                 </tr>
                 <tr class="table_row">
                     <td class="td">Identification number: </td>
