--- a/sites/basicinfo.html
+++ b/sites/basicinfo.html
@@ -24,7 +24,9 @@
                 padding-left: 300px;
 
             }
-
+            .grey_row{
+                background-color: rgb(214, 214, 214);
+            }
         </style>
         <title>Basic Informations</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -87,15 +89,15 @@
 
         <div>
             <table class="table1">
-                <tr class="table_row">
+                <tr class="table_row grey_row">
                     <td class="td">Headquarters: </td>
-                    <td class="table_data td">Allen St, New York, USA</td>
+                    <td class="table_data td">Grandview Blvd, Canada</td>
                 </tr>
                 <tr class="table_row">
                     <td class="td">Identification number: </td>
                     <td class="table_data td">1456671</td>
                 </tr>
-                <tr class="table_row">
+                <tr class="table_row grey_row">
                     <td class="td">Account number: </td>
                     <td class="table_data td">210014566713600</td>
                 </tr>
@@ -103,7 +105,7 @@
                     <td class="td">Telephone: </td>
                     <td class="table_data td">+383 43 323 779</td>
                 </tr>
-                <tr class="table_row">
+                <tr class="table_row grey_row">
                     <td class="td">Email: </td>
                     <td class="table_data td">grandbank@gb.ks</td>
                 </tr>
