--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -112,7 +112,8 @@
                         <div class="text">
                         <p>You can always come and meet us</p>
 
-                          <p><b>Grand Bank, NL, Canada</b></p>
+                          <p><b><address>
+                             Grand Bank, <abbr title="Newfoundland and Labrador">NL</abbr>, Canada</address></b></p>
                           <br>
                           <h4>What is your preferred contact method?</h3>
                             <div class="form-check mb-3">
