--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -42,6 +42,9 @@
                                 <a class="nav-link link-light" href="contact_us.html">Contact Us</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link link-light" href="help.html">Help</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link link-light" href="account.html" style="visibility:hidden;">Account</a>
                             </li>
                         </ul>
