--- a/sites/basicinfo.html
+++ b/sites/basicinfo.html
@@ -27,6 +27,10 @@
             .grey_row{
                 background-color: rgb(214, 214, 214);
             }
+            .FAQ_class{
+                padding-top: 100px;
+                margin-left: 30px;
+            }
         </style>
         <title>Basic Informations</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -64,6 +68,9 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link link-light" href="contact_us.html">Contact Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link link-light" href="help.html">Help</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link link-light" href="account.html" style="visibility:hidden;">Account</a>
