--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -92,7 +92,7 @@
 
                                         <br>
                                         <div class="submit">
-                                            <button class="btn btn-secondary" type="submit">Submit</button>
+                                            <button class="btn btn-secondary" type="submit" onclick="alert('Thank you for contacting us')">Submit</button>
                                         </div>
                                     </div>
                                 </div>
