--- a/sites/help.html
+++ b/sites/help.html
@@ -74,7 +74,7 @@
             <h4 class="FAQ_header text-center">Frequenty Asked Questions</h4>
 
             <div class="row">
-                <article class="FAQ_container col m-5">
+                <article class="FAQ_container col-xl m-5">
                     <p class="FAQ_question mt-3" id="faq-1">What Transactions Can Be Performed Using Online Banking?</p>
                     <ol id="list-1">
                         <li>Transfers</li>
@@ -91,7 +91,7 @@
                     </ol>
                 </article>
 
-                <article class="FAQ_container col m-5">
+                <article class="FAQ_container col-xl m-5">
                     <p class="FAQ_question mt-3" id="faq-2">How To Transfer Money Online?</p>
                     <ol id="list-2">
                         <li>Login to your mobile/internet banking account.</li>
