--- a/sites/basicinfo.html
+++ b/sites/basicinfo.html
@@ -96,27 +96,27 @@
         <div>
             <table class="table1">
                 <tr class="table_row grey_row">
-                    <td class="td">Headquarters: </td>
+                    <td class="td"><b>Headquarters:</b> </td>
                     <td class="table_data td">Grandview Blvd, Canada</td>
                 </tr>
                 <tr class="table_row">
-                    <td class="td">Identification number: </td>
+                    <td class="td"><b>Identification number:</b> </td>
                     <td class="table_data td">1456671</td>
                 </tr>
                 <tr class="table_row grey_row">
-                    <td class="td">Account number: </td>
+                    <td class="td"><b>Account number:</b> </td>
                     <td class="table_data td">210014566713600</td>
                 </tr>
                 <tr class="table_row">
-                    <td class="td">Telephone: </td>
+                    <td class="td"><b>Telephone:</b> </td>
                     <td class="table_data td">+383 43 323 779</td>
                 </tr>
                 <tr class="table_row grey_row">
-                    <td class="td">Email: </td>
+                    <td class="td"><b>Email:</b> </td>
                     <td class="table_data td">grandbank@gb.ks</td>
                 </tr>
                 <tr class="table_row">
-                    <td class="td">Office hours: </td>
+                    <td class="td"><b>Office hours:</b> </td>
                     <td class="table_data td">08:00 - 16:00</td>
                 </tr>
             </table>
