Disa ndryshime ne projekt

--- a/sites/about_us.html
+++ b/sites/about_us.html
@@ -80,11 +80,11 @@
             </nav>
         </header>
 
-        <main class="main_aboutus">
+        <main class="main_aboutus mx-5">
             <h1 class="aboutus_heading">Everything About Us</h1>
             <h5 class="aboutus_desc">Safety. Equality. Sincerity.</h5>
         </main>
-        <div class="description_container">
+        <div class="description_container container p-4">
             Grand Bank is a leading banking institution in Canada with a constant trend of growth
             and positive results from its foundation until today. <br>
             The success is due to the implementation of high-quality standards in operation,
