--- a/sites/basicinfo.html
+++ b/sites/basicinfo.html
@@ -91,9 +91,10 @@
             </nav>
         </header>
 
-        <h2 class="binfo_h">Basic Informations</h2>
 
-        <div>
+
+        <div class="container">
+            <h2 class="binfo_h">Basic Information</h2>
             <table class="table1">
                 <tr class="table_row grey_row">
                     <td class="td"><b>Headquarters:</b> </td>
@@ -120,7 +121,10 @@
                     <td class="table_data td">08:00 - 16:00</td>
                 </tr>
             </table>
+            <br>
+            <p style="margin-left:40px;"><a href="../files/transactions.csv" target="_blank">Have a look at recent transactions in our bank!</a></p>
         </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
