--- a/sites/employment.html
+++ b/sites/employment.html
@@ -61,18 +61,21 @@
             </nav>
         </header>
 
-        <div class="emp_div">
-            <img src="../images/employment_img.png" class="img1">
-            <div class="text_box_div">
-                The team of professionals and hard-workers from worldwide is the key to
-                our success and achievements
+        <div class="container-fluid">
+            <div class="emp_div">
+                <img src="../images/employment_img.png" class="img1">
+                <div class="text_box_div">
+                    The team of professionals and hard-workers from all around the world is the key to
+                    our success and achievements
+                </div>
+            </div>
+            <div class="emp_div2">
+                <p class="paragraph1">Active Job Applications</p>
+                <p class="paragraph2">Apply in our bank! We are always looking for professionals!</p><br>
+                <a href="https://www.indeed.com/q-USA-Bank-jobs.html?vjk=85b0b0ccafb1474b" class="application btn btn-outline-secondary mx-3 mb-1" target="_blank">Apply here!</a>
             </div>
         </div>
-        <div class="emp_div2">
-            <p class="paragraph1">Active Job Applications</p>
-            <p class="paragraph2">Search us on the following link and be a part of us!</p>
-            <a href="https://www.indeed.com/q-USA-Bank-jobs.html?vjk=85b0b0ccafb1474b" class="application" target="_blank">Apply here!</a>
-        </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
 </html>
