--- a/sites/gallery.html
+++ b/sites/gallery.html
@@ -61,21 +61,24 @@
                 </div>
             </nav>
         </header>
+        <div class="container">
+            <div class="division1 mt-5">
+                <img src="../images/gallery1.png" class="image1" style="float:left">
+                <p class="paragraph1">The inside of the bank entrance</p>
+            </div>
 
-        <div class="division1">
-            <img src="../images/gallery1.png" class="image1" style="float:left">
-            <p class="paragraph1">The inside of the bank entrance</p>
+            <div class="division2 mt-5">
+                <img src="../images/gallery2.png" class="image2" style="float:right">
+                <p class="paragraph2">The bank corridor</p>
+            </div>
+
+            <div class="division3 mt-5">
+                <img src="../images/gallery3.png" class="image3" style="float:left">
+                <p class="paragraph3">The bank cafeteria</p>
+            </div>
         </div>
 
-        <div class="division2">
-            <img src="../images/gallery2.png" class="image2" style="float:right">
-            <p class="paragraph2">The bank corridor</p>
-        </div>
 
-        <div class="division3">
-            <img src="../images/gallery3.png" class="image3" style="float:left">
-            <p class="paragraph3">The bank cafeteria</p>
-        </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
