--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -132,7 +132,7 @@
                               <input class="form-check-input" type="radio" id="radio3" name="cmethod" value="post">
                              <label class="form-check-label" for="radio3">Post</label>
                              </div>
-                             <p><b>E-mail us at: <a href="mailto:grand_bank@gmail.com" id="email_link">grand_bank@gmail.com</a></b></p>
+                             <p id="p1"><b>E-mail us at: <a href="mailto:grand_bank@gmail.com" id="email_link">grand_bank@gmail.com</a></b></p>
                           <br>
                         </div>
                     </div>
