--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -133,6 +133,17 @@
                              <label class="form-check-label" for="radio3">Post</label>
                              </div>
                              <p id="p1"><b>E-mail us at: <a href="mailto:grand_bank@gmail.com" id="email_link">grand_bank@gmail.com</a></b></p>
+                             <form action="/action_page.php" method="get">
+                                <label for="browser">You can find us in the social medias below:</label>
+                                <input list="browsers" name="browser" id="browser" placeholder="Social media">
+                                <datalist id="browsers" placeholder="Social media">
+                                <option value="Facebook">
+                                <option value="Twitter">
+                                 <option value="Youtube">
+                                <option value="Linkedin">
+                                </datalist>
+                                </form>
+    
                           <br>
                         </div>
                     </div>
