--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -97,6 +97,9 @@
                                         <div class="submit">
                                             <button class="btn btn-secondary" type="submit" onclick="alert('Thank you for contacting us')">Submit</button>
                                         </div>
+                                        <div >
+                                            <p id="date"></p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -153,6 +156,8 @@
         </form>
             <section class="container-fluid">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21731.7362212831!2d-55.76517898254629!3d47.08991440928087!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b6d937117a6fdf3%3A0x3013eace34e25fab!2sGrand%20Bank%2C%20NL%2C%20Canada!5e0!3m2!1sen!2s!4v1672904281063!5m2!1sen!2s" width="100%" height="350" style="border:0; " allowfullscreen="" loading="lazy"  referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <br>
+                
             </section>
             <footer>
                 <div class="footer-content">
