--- a/sites/privacy_policy.html
+++ b/sites/privacy_policy.html
@@ -61,7 +61,37 @@
                </div>
            </nav>
        </header>
+       <div class="privacy_policy">
 
+
+        <h1>Privacy Policy</h1>
+ <p>At Grand Bank, we are committed to protecting your privacy. We use the information we collect about you to provide a better user experience and to keep you informed about products and services that may be of interest to you.</p>
+ <h2>Information Collection and Use</h2>
+ <p>When you use our website or app, we may collect the following types of information:</p>
+ <ul>
+   <li>Personal information, such as your name, email address, and contact information.</li>
+   <li>Demographic information, such as your age, gender, and interests.</li>
+   <li>Technical information, such as your IP address, browser type, and access times.</li>
+   <li>Usage information, such as how you use our website or app and what features you access.</li>
+ </ul>
+ <p>We may use this information for the following purposes:</p>
+ <ul>
+   <li>To personalize your experience on our website or app.</li>
+   <li>To improve our website or app based on the information and feedback we receive from you.</li>
+   <li>To send you promotional emails or other communications about our products or services.</li>
+ </ul>
+ <h2>Information Sharing and Disclosure</h2>
+ <p>We will not share or disclose your personal information to any third party, except as described in this privacy policy or with your prior consent. We may share or disclose your information in the following circumstances:</p>
+ <ul>
+   <li>To comply with legal requirements, such as a court order or subpoena.</li>
+   <li>To protect the rights and safety of Grand Bank and our users.</li>
+   <li>To enforce our website or app's terms of use.</li>
+   <li>To provide you with products or services that you have requested.</li>
+ </ul>
+ <h2>Cookies and Other Tracking Technologies</h2>
+ <p>We may use cookies and other tracking technologies to collect information about your use of our website or app. Cookies are small text files that are stored on your device when you visit a website. We may use both session cookies and persistent cookies. A session cookie expires when you close your browser, while a persistent cookie remains on your device until it expires or you delete it.</p>
+ <p>You can control the use of cookies at the individual browser level. If you reject cookies, you may still use our website or app, but your ability to use some features or areas of our website or app may be limited.</p>
+ </div>
 <footer>
     <div class="footer-content">
         <ul class="socials">
