--- a/sites/privacy_policy.html
+++ b/sites/privacy_policy.html
@@ -106,5 +106,21 @@
   <footer class="copyright-section">
       <p>@Copyright 2022 - Grupi 22</p>
   </footer>
+  <script>
+  function person(fname, lname, cookies) {
+this.firstname = fname;
+this.lastname = lname;
+this.cook = cookies
+};
+
+const firstPerson = new person("Visar", "Gjema", "yes");
+const seconfPerson = new person("Filan", "Fisteku", "no");
+const thirdPerson = new person("Arlind", "Shabani", "yes");
+
+console.log(firstPerson);
+console.log(secondPerson);
+console.log(thirdPerson);
+
+  </script>
 </body>
 </html>
