--- a/sites/privacy_policy.html
+++ b/sites/privacy_policy.html
@@ -120,7 +120,9 @@ const thirdPerson = new person("Arlind", "Shabani", "yes");
 console.log(firstPerson);
 console.log(secondPerson);
 console.log(thirdPerson);
-
+console.log(firstPerson.replace("yes", "no"));
+let text_match = thirdPerson.match("Arlind");
+console.log(text_match);
   </script>
 </body>
 </html>
