--- a/sites/signup.html
+++ b/sites/signup.html
@@ -35,8 +35,6 @@
                                     <li><a class="dropdown-item" href="basicinfo.html">Basic Informations</a></li>
                                     <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
                                     <li><a class="dropdown-item" href="employment.html">Employment</a></li>
-                                    <li><a  class="dropdown-item" href="privacy_policy.html">Privacy Policy</a></li>
-
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -54,7 +52,7 @@
                                 <li class="nav-item">
                                     <a href="login.html" class="nav-link link-light">Log In</a>
                                 </li>
-                                  </ul>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -109,8 +107,8 @@
                             <input class="form-control my-1" type="password" name="confirm_password" id="confirm_password" class="input" required>
 
                             <p id="signup-error-msg" style="opacity:0;">Your passwords don't match.</p>
-
-                       <button type="submit" class="login btn btn-secondary my-1 " id="signup-form-submit">Sign Up</button>
+                        <p>By pressing Sign Up you agree to our <a href="privacy_policy.html" class="link">Terms and Conditions</a></p>
+                        <button type="submit" class="login btn btn-secondary my-1 " id="signup-form-submit">Sign Up</button>
 
                        <p style="text-align:center; color:black;">Already have an accont? <a href="login.html" class="link">Log in</a> now</p>
                     </form>
