--- a/sites/help.html
+++ b/sites/help.html
@@ -70,8 +70,8 @@
             <p class="help_text">A guide to some of the services we offer</p>
         </div>
 
-        <section class="container mt-1">
-            <h4 class="FAQ_header text-center">Frequenty Asked Questions</h4>
+        <section class="container mt-2">
+            <h4 class="FAQ_header text-center">Frequently Asked Questions</h4>
 
             <div class="row">
                 <article class="FAQ_container col-xl m-5">
@@ -114,7 +114,7 @@
         </center>
         <br>
         <footer class="copyright-section">
-            <p>@Copyright 2022 - Grupi 19</p>
+            <p>&copy; Copyright 2022 - Grupi 19</p>
         </footer>
 
 
