--- a/sites/privacy_policy.html
+++ b/sites/privacy_policy.html
@@ -59,7 +59,7 @@
     </div>
   </footer>
   <footer class="copyright-section">
-      <p>@Copyright 2022 - Grupi 19</p>
+      <p>&copy; Copyright 2022 - Grupi 19</p>
   </footer>
   <script>
     function person(fname, lname, cookies) {
